5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1671_1102.log
== TEST (2019-04-28 10:11:16) 
-- CODE:
h = float(input("Altura total do tanque: "))
n = float(input("Nivel de combustivel: "))
r = float(input("Raio dos bojos: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = (1./3) * pi * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h = n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
File "XXXX", line 12
    vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h = n)
                                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:12:12) 
-- CODE:
h = float(input("Altura total do tanque: "))
n = float(input("Nivel de combustivel: "))
r = float(input("Raio dos bojos: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = (1./3) * pi * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:15:41) 
-- CODE:
h = float(input("Altura total do tanque: "))
r = float(input("Raio dos bojod=s: "))
n = float(input("Nivel do combustivel: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = (1./3) * pi * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vol = (1./3) * pi * n**2 * (3 * r - n)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:17:42) 
-- CODE:
h = float(input("Altura total do tanque: "))
r = float(input("Raio dos bojod=s: "))
n = float(input("Nivel do combustivel: "))
 
pi == 3.14
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = (1./3) * pi * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pi == 3.14
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:18:10) 
-- CODE:
h = float(input("Altura total do tanque: "))
r = float(input("Raio dos bojod=s: "))
n = float(input("Nivel do combustivel: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = (1./3) * pi * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (2./3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4./3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (1/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vol = (1./3) * pi * n**2 * (3 * r - n)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:26:58) 
-- CODE:
h = float(input("Altura total do tanque: "))
r = float(input("Raio dos bojos: "))
n = float(input("Nivel do combustivel: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = pi/3 * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (4/3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4/3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (4/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vol = pi/3 * n**2 * (3 * r - n)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:21:19) 
-- CODE:
from math import*
h = float(input("Altura total do tanque: "))
r = float(input("Raio dos bojos: "))
n = float(input("Nivel do combustivel: "))
 
if (n < 0 or h < 0 or r < 0):
	vol = -1
elif (n < r):
	vol = pi/3 * n**2 * (3 * r - n)
elif (n < h - r):
	vol = (4/3) * pi * r**3 + pi * r**2 * (n - r)
elif (n <= h):
	vol = (4/3) * pi * r**3 + pi * r**2 * (h - 2 * r) -  (4/3) * pi * (h -n)**2 * (3 * r - h + n)
else:
	vol = -1
print(round(vol, 3))
-- OUTPUT:
81.987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
